Fixed all visual issues on IE11

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3100,3 +3100,6 @@ h3 {
 .slick-prev:before, .slick-next:before {
   color: #d87a61!important;
 }
+select::-ms-expand {
+    display: none;
+}
